still trying to fix blurriness on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,8 @@ body {
 #canvas {
   background-color: #0f0;
   overflow-y: hidden;
+  image-rendering: pixelated;
+  image-rendering: crisp-edges;
 }
 
 #about {
